fixed alignment issues and changed to 3 column

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -28,6 +28,3 @@ $gray4: #454545;
     @import './partials/admin.scss';
     
 }
-* {
-  font-family: fieldwork, sans-serif;
-}
