--- a/src/css/partials/tiles.scss
+++ b/src/css/partials/tiles.scss
@@ -1,13 +1,11 @@
 // Icon Layout 
-@mixin tile-listing-layout {
 
-}
 @mixin tile-content-layout {
     grid-template-areas:
-        'title title title'
-        'description description description'
-        'cta cta cta'
-        'label label label';
+        'title title'
+        'description description'
+        'cta cta'
+        'label label';
 }
 
 
@@ -21,11 +19,12 @@
     }
 }
 .tile-listing {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 0;
     padding: 0;
+    gap:10px 0;
     @supports (display: grid) {
         @include grid(#{$hd}, 4); // Grid layout (1 across, 2 across, 3, across etc...); 
         grid-gap: 40px;
@@ -33,32 +32,34 @@
     @media (max-width: $hd) {
         padding: 0 10px;
     }
-    .tile-item {
-        position: relative;
-        display: grid;
-        grid-gap: 0px;
-        grid-template-rows: 80px 1fr; /* img + content */
-        width: 400px;
-        max-width: 100%;
-        transition: opacity 0.1s;
-        margin: 0 auto;
-        &:hover,
-        &:focus {
-            .tile-img {
-                background: $brand2;
-                // border-radius: 10px 10px 0 0;
-                img {
-                    transform: rotate(-5deg) scale(1.1) translate(-50%, -50%);
-                    mix-blend-mode: multiply;
-                }
+
+}
+.tile-item {
+    position: relative;
+    list-style-type: none;
+    grid-template-rows: 100px 1fr; /* img + content */
+    width:350px;
+    margin: 0 auto;
+    max-width: 100%;
+    transition: opacity 0.1s;
+    // margin: 0 auto;
+    display:grid; 
+    &:hover,
+    &:focus {
+        .tile-img {
+            background: $brand3;
+            // border-radius: 10px 10px 0 0;
+            img {
+                transform: rotate(-5deg) scale(1.1) translate(-50%, -50%);
+                mix-blend-mode: multiply;
             }
         }
-        
     }
+    
 }
 .tile-img {
     width: 100%;
-    height: 80px;
+    height: 100px;
     overflow: hidden;
     // border-radius: 10px 10px 0 0;
     position: relative;
@@ -88,8 +89,9 @@
     @media (min-width: $desktop) {
         display: grid;
         grid-gap: 10px;
-        grid-template-columns: 40px repeat(2, 1fr) auto;
-        grid-template-rows: 0.5fr 0.5fr minmax(min-content, 0.7fr) 50px min-content
+        // grid-template-columns: 40px repeat(2, 1fr) auto; // used if icons are being used
+        grid-template-columns: 1fr 1fr; // used if icons are being used
+        grid-template-rows: minmax(max-content, 0.7fr) minmax(auto, 1fr) minmax(auto, 67px) 50px auto
 
     }
     .tile-icon {
@@ -106,22 +108,37 @@
     }
     .tile-title {
         grid-area: title;
-        align-self: center;
+        align-self: start;
+        h3 {
+            margin:10px 0 0;
+        }
     }
     .tile-description {
         grid-area: description;
+        align-self: start;
     }
     .tile-cta {
         grid-area: cta;
-        align-self: center;
+        align-self: end;
         text-align:center;
+
         .btn-primary {
-            margin-right:20px;
+            // margin-right:20px;
             box-shadow: 0 0 0 1px #033d58;
-            margin-bottom:5px;
+            margin-bottom:10px;
+            margin-left:10px;
+            margin-right:10px;
+            padding:12px 10px;
             &.ghost{
                 margin-right:0;
                 box-shadow: 0 0 0 1px #033d58;
+            }
+            &:first-child {
+                margin-left:0;
+            }
+            &:last-child{
+                margin-right:0;
+
             }
         }
     
@@ -139,7 +156,7 @@
     // }
     .tile-label {
         grid-area: label;
-        align-self:end;
+        align-self:center;
         cursor: pointer;
         .label {
             border-radius: 40px;
